update syntax or fixes bug
